--- a/telegram-bot/package.json
+++ b/telegram-bot/package.json
@@ -12,8 +12,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google-cloud/speech": "^7.0.1",
     "axios": "^1.8.4",
     "dotenv": "^16.5.0",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "node-telegram-bot-api": "^0.66.0"
   },
   "devDependencies": {
