--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
+    "@heroicons/vue": "^2.2.0",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
+    "framer-motion": "^12.8.2",
     "pinia": "^3.0.2",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
