--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,10 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
-    "@tailwindcss/postcss": "^4.1.4",
-    "autoprefixer": "^10.4.21",
+    "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
     "framer-motion": "^12.8.2",
     "pinia": "^3.0.2",
-    "postcss": "^8.5.3",
     "primeicons": "^7.0.0",
     "primevue": "^3.53.1",
     "tailwindcss": "^4.1.4",
